--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="head">
         <img class="mountain" src="mountain.png" alt="mountain.png">
     <div class="intro">
-        <h1 class="name">I<span class="desgin">'</span>m Vishal</h1>
-        <h2 class="details"> &#160 a programmer</h2>
+         <h1 class="name">I<span class="desgin">'</span>m a Vishal</h1>
+        <h2 class="details"> &#160 a <a href="maths.html">pro</a>grammer</h2>
     </div>
     <img class="top_cloud" src="cloud.png" alt="cloud.png">
     <img class="down_cloud" src="cloud.png" alt="cloud.png">
@@ -61,7 +61,7 @@
 <a class="footer_link" href="#">LinkedIn&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160</a>
 <a class="footer_link" href="#">Twitter&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160</a>
 <a class="footer_link" href="#">Website</a>
-<p class="copyright">© 2022 Vishal Sharma.</p>
+<p class="copyright">© 2022  Vishal Sharma.</p>
     </div>
 </body>
 </html>
