--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="head">
         <img class="mountain" src="mountain.png" alt="mountain.png">
     <div class="intro">
-         <h1 class="name">I<span class="desgin">'</span>m a Vishal</h1>
+         <h1 class="name">I<span class="desgin">'</span>m  Vishal</h1>
         <h2 class="details"> &#160 a <a href="maths.html">pro</a>grammer</h2>
     </div>
     <img class="top_cloud" src="cloud.png" alt="cloud.png">
