--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="mountain" src="mountain.png" alt="mountain.png">
     <div class="intro">
          <h1 class="name">I<span class="desgin">'</span>m  Vishal</h1>
-        <h2 class="details"> &#160 a <a href="maths.html">pro</a>grammer</h2>
+        <h2 class="details"> &#160 a <a href="maths_website/maths.html">pro</a>grammer</h2>
     </div>
     <img class="top_cloud" src="cloud.png" alt="cloud.png">
     <img class="down_cloud" src="cloud.png" alt="cloud.png">
